--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ProjetoFioCruz" parent="android:Theme.Material.Light.NoActionBar" />
+    <!-- Tema personalizado para o seu app, que herda de Theme.AppCompat -->
+    <style name="Theme.ProjetoFioCruz" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Cores personalizadas -->
+        <item name="colorPrimary">#6200EE</item> <!-- Roxo claro -->
+        <item name="colorPrimaryDark">#3700B3</item> <!-- Roxo escuro -->
+        <item name="colorAccent">#03DAC5</item> <!-- Verde água -->
+    </style>
+
 </resources>
