--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -13,44 +13,72 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Nome"
         android:inputType="textPersonName"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="166dp" />
+        tools:layout_editor_absoluteX="26dp" />
 
     <EditText
         android:id="@+id/addLocal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Local"
         android:inputType="textPersonName"
         app:layout_constraintTop_toBottomOf="@+id/addNome"
-        tools:layout_editor_absoluteX="105dp" />
+        tools:layout_editor_absoluteX="41dp" />
 
     <EditText
         android:id="@+id/addIdade"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:layout_margin="16dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Idade"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@+id/addLocal"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="41dp" />
 
     <Button
         android:id="@+id/addbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="add"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="92dp"
+        android:backgroundTint="#FF5722"
+        android:text="Adicionar"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/addNum" />
+
+    <EditText
+        android:id="@+id/addCpf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_margin="16dp"
+        android:ems="10"
+        android:inputType="number"
+        android:hint="CPF"
+        app:layout_constraintTop_toBottomOf="@+id/addIdade"
+        tools:layout_editor_absoluteX="25dp" />
+
+    <EditText
+        android:id="@+id/addNum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="Número"
+        android:inputType="number"
+        app:layout_constraintTop_toBottomOf="@+id/addCpf"
+        tools:layout_editor_absoluteX="26dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
