--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -12,10 +12,15 @@
         android:layout_height="50dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
+        android:adjustViewBounds="false"
         android:clickable="true"
         android:src="@drawable/ic_add"
+        app:backgroundTint="#FF5722"
+        app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="28dp"
+        app:useCompatPadding="false" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleview"
